@@ -1,9 +1,8 @@
 package com.zerobase.foodlier.module.member.chef.service;
 
+import com.zerobase.foodlier.common.response.ListResponse;
 import com.zerobase.foodlier.module.member.chef.domain.model.ChefMember;
-import com.zerobase.foodlier.module.member.chef.dto.AroundChefDto;
-import com.zerobase.foodlier.module.member.chef.dto.ChefIntroduceForm;
-import com.zerobase.foodlier.module.member.chef.dto.RequestedChefDto;
+import com.zerobase.foodlier.module.member.chef.dto.*;
 import com.zerobase.foodlier.module.member.chef.exception.ChefMemberException;
 import com.zerobase.foodlier.module.member.chef.repository.ChefMemberRepository;
 import com.zerobase.foodlier.module.member.chef.type.ChefSearchType;
@@ -20,7 +19,11 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -46,7 +49,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 등록 성공")
-    void success_registerChef(){
+    void success_registerChef() {
 
         //given
         given(memberRepository.findById(anyLong()))
@@ -90,19 +93,19 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 정보 수정 성공")
-    void success_updateChefIntroduce(){
+    void success_updateChefIntroduce() {
         //given
         given(memberRepository.findById(anyLong()))
                 .willReturn(Optional.of(Member.builder()
                         .id(1L)
                         .email("test@test.com")
                         .nickname("nickname")
-                                .chefMember(
-                                        ChefMember.builder()
-                                                .id(1L)
-                                                .introduce("수정 전 소개")
-                                                .build()
-                                )
+                        .chefMember(
+                                ChefMember.builder()
+                                        .id(1L)
+                                        .introduce("수정 전 소개")
+                                        .build()
+                        )
                         .build())
                 );
 
@@ -126,7 +129,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 등록 실패 - 회원을 찾을 수 없음")
-    void fail_registerChef_member_not_found(){
+    void fail_registerChef_member_not_found() {
 
         //given
         given(memberRepository.findById(anyLong()))
@@ -145,7 +148,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 등록 실패 - 이미 등록된 요리사")
-    void fail_registerChef_already_register_chef(){
+    void fail_registerChef_already_register_chef() {
 
         //given
         given(memberRepository.findById(anyLong()))
@@ -171,7 +174,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 등록 실패 - 3개 미만")
-    void fail_registerChef_less_three_recipe(){
+    void fail_registerChef_less_three_recipe() {
 
         //given
         given(memberRepository.findById(anyLong()))
@@ -200,7 +203,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 정보 수정 실패 - 회원을 찾을 수 없음")
-    void fail_updateChefIntroduce_member_not_found(){
+    void fail_updateChefIntroduce_member_not_found() {
         //given
         given(memberRepository.findById(anyLong()))
                 .willReturn(
@@ -219,7 +222,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사 정보 수정 실패 - 요리사가 아님")
-    void fail_updateChefIntroduce_chef_member_not_found(){
+    void fail_updateChefIntroduce_chef_member_not_found() {
         //given
         given(memberRepository.findById(anyLong()))
                 .willReturn(Optional.of(Member.builder()
@@ -241,108 +244,74 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요청된 요리사 목록 가져오기")
-    void success_getRequestedChefList(){
+    void success_getRequestedChefList() {
         //given
 
         List<RequestedChefDto> chefList = List.of(
-                new RequestedChefDto() {
-                    @Override
-                    public Long getChefId() {
-                        return 1L;
-                    }
-
-                    @Override
-                    public String getIntroduce() {
-                        return "요리사 소개";
-                    }
-
-                    @Override
-                    public double getStarAvg() {
-                        return 3.0;
-                    }
-
-                    @Override
-                    public int getReviewCount() {
-                        return 3;
-                    }
-
-                    @Override
-                    public String getProfileUrl() {
-                        return "https://s3.com/test.png";
-                    }
-
-                    @Override
-                    public String getNickname() {
-                        return "nickname";
-                    }
-
-                    @Override
-                    public double getLat() {
-                        return 37.1;
-                    }
-
-                    @Override
-                    public double getLnt() {
-                        return 127.1;
-                    }
-
-                    @Override
-                    public double getDistance() {
-                        return 1.12;
-                    }
-
-                    @Override
-                    public int getRecipeCount() {
-                        return 2;
-                    }
-
-                    @Override
-                    public Long getRequestId() {
-                        return 1L;
-                    }
-
-                    @Override
-                    public int getIsQuotation() {
-                        return 0;
-                    }
-
-                    @Override
-                    public Long getQuotationId() {
-                        return 1L;
-                    }
-                }
+                RequestedChefDto.builder()
+                        .requestId(1L)
+                        .introduce("요리사 소개")
+                        .starAvg(3.0)
+                        .recipeCount(3L)
+                        .profileUrl("https://s3.com/test.png")
+                        .nickname("nickname")
+                        .lat(37.1)
+                        .lnt(127.1)
+                        .distance(1.12)
+                        .recipeCount(2L)
+                        .requestId(1L)
+                        .isQuotation(false)
+                        .quotationId(1L)
+                        .build()
         );
 
-        given(chefMemberRepository.findRequestedChef(anyLong(), anyInt(), anyInt()))
+        given(chefMemberRepository.findRequestedChef(anyLong(), any()))
                 .willReturn(
-                    chefList
+                        new PageImpl<>(
+                                new ArrayList<>(
+                                        chefList
+                                )
+                        )
                 );
         //when
-        List<RequestedChefDto> responseChefList = chefMemberService
-                .getRequestedChefList(1L, 0, 10);
+        ListResponse<RequestedChefDto> responseChefList = chefMemberService
+                .getRequestedChefList(1L, PageRequest.of(0, 10));
 
         //then
         assertAll(
-                () -> assertEquals(chefList.get(0).getChefId(), responseChefList.get(0).getChefId()),
-                () -> assertEquals(chefList.get(0).getIntroduce(), responseChefList.get(0).getIntroduce()),
-                () -> assertEquals(chefList.get(0).getStarAvg(), responseChefList.get(0).getStarAvg()),
-                () -> assertEquals(chefList.get(0).getReviewCount(), responseChefList.get(0).getReviewCount()),
-                () -> assertEquals(chefList.get(0).getProfileUrl(), responseChefList.get(0).getProfileUrl()),
-                () -> assertEquals(chefList.get(0).getNickname(), responseChefList.get(0).getNickname()),
-                () -> assertEquals(chefList.get(0).getDistance(), responseChefList.get(0).getDistance()),
-                () -> assertEquals(chefList.get(0).getLat(), responseChefList.get(0).getLat()),
-                () -> assertEquals(chefList.get(0).getLnt(), responseChefList.get(0).getLnt()),
-                () -> assertEquals(chefList.get(0).getRecipeCount(), responseChefList.get(0).getRecipeCount()),
-                () -> assertEquals(chefList.get(0).getRequestId(), responseChefList.get(0).getRequestId()),
-                () -> assertEquals(chefList.get(0).getIsQuotation(), responseChefList.get(0).getIsQuotation()),
-                () -> assertEquals(chefList.get(0).getQuotationId(), responseChefList.get(0).getQuotationId())
+                () -> assertEquals(chefList.get(0).getChefId(),
+                        responseChefList.getContent().get(0).getChefId()),
+                () -> assertEquals(chefList.get(0).getIntroduce(),
+                        responseChefList.getContent().get(0).getIntroduce()),
+                () -> assertEquals(chefList.get(0).getStarAvg(),
+                        responseChefList.getContent().get(0).getStarAvg()),
+                () -> assertEquals(chefList.get(0).getReviewCount(),
+                        responseChefList.getContent().get(0).getReviewCount()),
+                () -> assertEquals(chefList.get(0).getProfileUrl(),
+                        responseChefList.getContent().get(0).getProfileUrl()),
+                () -> assertEquals(chefList.get(0).getNickname(),
+                        responseChefList.getContent().get(0).getNickname()),
+                () -> assertEquals(chefList.get(0).getDistance(),
+                        responseChefList.getContent().get(0).getDistance()),
+                () -> assertEquals(chefList.get(0).getLat(),
+                        responseChefList.getContent().get(0).getLat()),
+                () -> assertEquals(chefList.get(0).getLnt(),
+                        responseChefList.getContent().get(0).getLnt()),
+                () -> assertEquals(chefList.get(0).getRecipeCount(),
+                        responseChefList.getContent().get(0).getRecipeCount()),
+                () -> assertEquals(chefList.get(0).getRequestId(),
+                        responseChefList.getContent().get(0).getRequestId()),
+                () -> assertEquals(chefList.get(0).getIsQuotation(),
+                        responseChefList.getContent().get(0).getIsQuotation()),
+                () -> assertEquals(chefList.get(0).getQuotationId(),
+                        responseChefList.getContent().get(0).getQuotationId())
         );
 
     }
 
     @Test
     @DisplayName("주변 요리사 조회하기 - 거리순")
-    void success_getAroundChefList_by_distance(){
+    void success_getAroundChefList_by_distance() {
         //given
         AroundChefDto chef1 = getChef1();
         AroundChefDto chef2 = getChef2();
@@ -359,48 +328,52 @@ class ChefMemberServiceImplTest {
                         .build()
                 ));
 
-        given(chefMemberRepository.findAroundChefOrderByDistance(
-                anyLong(), anyDouble(), anyDouble(), anyDouble(), anyInt(), anyInt()
+        given(chefMemberRepository.findAroundChefOrderByType(
+                anyLong(), anyDouble(), anyDouble(), anyDouble(), any(), any()
         )).willReturn(
-                List.of(
-                        chef2, chef1
+                new PageImpl<>(
+                        new ArrayList<>(
+                                Arrays.asList(
+                                        chef2, chef1
+                                )
+                        )
                 )
         );
 
         //when
-        List<AroundChefDto> response = chefMemberService
-                .getAroundChefList(1L, 0, 10,
+        ListResponse<AroundChefDto> response = chefMemberService
+                .getAroundChefList(1L, PageRequest.of(0, 10),
                         ChefSearchType.DISTANCE);
 
         //then
         assertAll(
-                () -> assertEquals(chef2.getChefId(), response.get(0).getChefId()),
-                () -> assertEquals(chef2.getIntroduce(), response.get(0).getIntroduce()),
-                () -> assertEquals(chef2.getStarAvg(), response.get(0).getStarAvg()),
-                () -> assertEquals(chef2.getReviewCount(), response.get(0).getReviewCount()),
-                () -> assertEquals(chef2.getProfileUrl(), response.get(0).getProfileUrl()),
-                () -> assertEquals(chef2.getDistance(), response.get(0).getDistance()),
-                () -> assertEquals(chef2.getLat(), response.get(0).getLat()),
-                () -> assertEquals(chef2.getLnt(), response.get(0).getLnt()),
-                () -> assertEquals(chef2.getNickname(), response.get(0).getNickname()),
-                () -> assertEquals(chef2.getRecipeCount(), response.get(0).getRecipeCount()),
+                () -> assertEquals(chef2.getChefId(), response.getContent().get(0).getChefId()),
+                () -> assertEquals(chef2.getIntroduce(), response.getContent().get(0).getIntroduce()),
+                () -> assertEquals(chef2.getStarAvg(), response.getContent().get(0).getStarAvg()),
+                () -> assertEquals(chef2.getReviewCount(), response.getContent().get(0).getReviewCount()),
+                () -> assertEquals(chef2.getProfileUrl(), response.getContent().get(0).getProfileUrl()),
+                () -> assertEquals(chef2.getDistance(), response.getContent().get(0).getDistance()),
+                () -> assertEquals(chef2.getLat(), response.getContent().get(0).getLat()),
+                () -> assertEquals(chef2.getLnt(), response.getContent().get(0).getLnt()),
+                () -> assertEquals(chef2.getNickname(), response.getContent().get(0).getNickname()),
+                () -> assertEquals(chef2.getRecipeCount(), response.getContent().get(0).getRecipeCount()),
 
-                () -> assertEquals(chef1.getChefId(), response.get(1).getChefId()),
-                () -> assertEquals(chef1.getIntroduce(), response.get(1).getIntroduce()),
-                () -> assertEquals(chef1.getStarAvg(), response.get(1).getStarAvg()),
-                () -> assertEquals(chef1.getReviewCount(), response.get(1).getReviewCount()),
-                () -> assertEquals(chef1.getProfileUrl(), response.get(1).getProfileUrl()),
-                () -> assertEquals(chef1.getDistance(), response.get(1).getDistance()),
-                () -> assertEquals(chef1.getLat(), response.get(1).getLat()),
-                () -> assertEquals(chef1.getLnt(), response.get(1).getLnt()),
-                () -> assertEquals(chef1.getNickname(), response.get(1).getNickname()),
-                () -> assertEquals(chef1.getRecipeCount(), response.get(1).getRecipeCount())
+                () -> assertEquals(chef1.getChefId(), response.getContent().get(1).getChefId()),
+                () -> assertEquals(chef1.getIntroduce(), response.getContent().get(1).getIntroduce()),
+                () -> assertEquals(chef1.getStarAvg(), response.getContent().get(1).getStarAvg()),
+                () -> assertEquals(chef1.getReviewCount(), response.getContent().get(1).getReviewCount()),
+                () -> assertEquals(chef1.getProfileUrl(), response.getContent().get(1).getProfileUrl()),
+                () -> assertEquals(chef1.getDistance(), response.getContent().get(1).getDistance()),
+                () -> assertEquals(chef1.getLat(), response.getContent().get(1).getLat()),
+                () -> assertEquals(chef1.getLnt(), response.getContent().get(1).getLnt()),
+                () -> assertEquals(chef1.getNickname(), response.getContent().get(1).getNickname()),
+                () -> assertEquals(chef1.getRecipeCount(), response.getContent().get(1).getRecipeCount())
         );
     }
 
     @Test
     @DisplayName("주변 요리사 조회하기 - 별점순")
-    void success_getAroundChefList_by_star(){
+    void success_getAroundChefList_by_star() {
         //given
         AroundChefDto chef1 = getChef1();
         AroundChefDto chef2 = getChef2();
@@ -417,48 +390,52 @@ class ChefMemberServiceImplTest {
                         .build()
                 ));
 
-        given(chefMemberRepository.findAroundChefOrderByStar(
-                anyLong(), anyDouble(), anyDouble(), anyDouble(), anyInt(), anyInt()
+        given(chefMemberRepository.findAroundChefOrderByType(
+                anyLong(), anyDouble(), anyDouble(), anyDouble(), any(), any()
         )).willReturn(
-                List.of(
-                        chef1, chef2
+                new PageImpl<>(
+                        new ArrayList<>(
+                                Arrays.asList(
+                                        chef1, chef2
+                                )
+                        )
                 )
         );
 
         //when
-        List<AroundChefDto> response = chefMemberService
-                .getAroundChefList(1L, 0, 10,
+        ListResponse<AroundChefDto> response = chefMemberService
+                .getAroundChefList(1L, PageRequest.of(0, 10),
                         ChefSearchType.STAR);
 
         //then
         assertAll(
-                () -> assertEquals(chef1.getChefId(), response.get(0).getChefId()),
-                () -> assertEquals(chef1.getIntroduce(), response.get(0).getIntroduce()),
-                () -> assertEquals(chef1.getStarAvg(), response.get(0).getStarAvg()),
-                () -> assertEquals(chef1.getReviewCount(), response.get(0).getReviewCount()),
-                () -> assertEquals(chef1.getProfileUrl(), response.get(0).getProfileUrl()),
-                () -> assertEquals(chef1.getDistance(), response.get(0).getDistance()),
-                () -> assertEquals(chef1.getLat(), response.get(0).getLat()),
-                () -> assertEquals(chef1.getLnt(), response.get(0).getLnt()),
-                () -> assertEquals(chef1.getNickname(), response.get(0).getNickname()),
-                () -> assertEquals(chef1.getRecipeCount(), response.get(0).getRecipeCount()),
+                () -> assertEquals(chef1.getChefId(), response.getContent().get(0).getChefId()),
+                () -> assertEquals(chef1.getIntroduce(), response.getContent().get(0).getIntroduce()),
+                () -> assertEquals(chef1.getStarAvg(), response.getContent().get(0).getStarAvg()),
+                () -> assertEquals(chef1.getReviewCount(), response.getContent().get(0).getReviewCount()),
+                () -> assertEquals(chef1.getProfileUrl(), response.getContent().get(0).getProfileUrl()),
+                () -> assertEquals(chef1.getDistance(), response.getContent().get(0).getDistance()),
+                () -> assertEquals(chef1.getLat(), response.getContent().get(0).getLat()),
+                () -> assertEquals(chef1.getLnt(), response.getContent().get(0).getLnt()),
+                () -> assertEquals(chef1.getNickname(), response.getContent().get(0).getNickname()),
+                () -> assertEquals(chef1.getRecipeCount(), response.getContent().get(0).getRecipeCount()),
 
-                () -> assertEquals(chef2.getChefId(), response.get(1).getChefId()),
-                () -> assertEquals(chef2.getIntroduce(), response.get(1).getIntroduce()),
-                () -> assertEquals(chef2.getStarAvg(), response.get(1).getStarAvg()),
-                () -> assertEquals(chef2.getReviewCount(), response.get(1).getReviewCount()),
-                () -> assertEquals(chef2.getProfileUrl(), response.get(1).getProfileUrl()),
-                () -> assertEquals(chef2.getDistance(), response.get(1).getDistance()),
-                () -> assertEquals(chef2.getLat(), response.get(1).getLat()),
-                () -> assertEquals(chef2.getLnt(), response.get(1).getLnt()),
-                () -> assertEquals(chef2.getNickname(), response.get(1).getNickname()),
-                () -> assertEquals(chef2.getRecipeCount(), response.get(1).getRecipeCount())
+                () -> assertEquals(chef2.getChefId(), response.getContent().get(1).getChefId()),
+                () -> assertEquals(chef2.getIntroduce(), response.getContent().get(1).getIntroduce()),
+                () -> assertEquals(chef2.getStarAvg(), response.getContent().get(1).getStarAvg()),
+                () -> assertEquals(chef2.getReviewCount(), response.getContent().get(1).getReviewCount()),
+                () -> assertEquals(chef2.getProfileUrl(), response.getContent().get(1).getProfileUrl()),
+                () -> assertEquals(chef2.getDistance(), response.getContent().get(1).getDistance()),
+                () -> assertEquals(chef2.getLat(), response.getContent().get(1).getLat()),
+                () -> assertEquals(chef2.getLnt(), response.getContent().get(1).getLnt()),
+                () -> assertEquals(chef2.getNickname(), response.getContent().get(1).getNickname()),
+                () -> assertEquals(chef2.getRecipeCount(), response.getContent().get(1).getRecipeCount())
         );
     }
 
     @Test
     @DisplayName("주변 요리사 조회하기 - 리뷰순")
-    void success_getAroundChefList_by_review(){
+    void success_getAroundChefList_by_review() {
         //given
         AroundChefDto chef1 = getChef1();
         AroundChefDto chef2 = getChef2();
@@ -475,48 +452,52 @@ class ChefMemberServiceImplTest {
                         .build()
                 ));
 
-        given(chefMemberRepository.findAroundChefOrderByReview(
-                anyLong(), anyDouble(), anyDouble(), anyDouble(), anyInt(), anyInt()
+        given(chefMemberRepository.findAroundChefOrderByType(
+                anyLong(), anyDouble(), anyDouble(), anyDouble(), any(), any()
         )).willReturn(
-                List.of(
-                        chef1, chef2
+                new PageImpl<>(
+                        new ArrayList<>(
+                                Arrays.asList(
+                                        chef1, chef2
+                                )
+                        )
                 )
         );
 
         //when
-        List<AroundChefDto> response = chefMemberService
-                .getAroundChefList(1L, 0, 10,
+        ListResponse<AroundChefDto> response = chefMemberService
+                .getAroundChefList(1L, PageRequest.of(0, 10),
                         ChefSearchType.REVIEW);
 
         //then
         assertAll(
-                () -> assertEquals(chef1.getChefId(), response.get(0).getChefId()),
-                () -> assertEquals(chef1.getIntroduce(), response.get(0).getIntroduce()),
-                () -> assertEquals(chef1.getStarAvg(), response.get(0).getStarAvg()),
-                () -> assertEquals(chef1.getReviewCount(), response.get(0).getReviewCount()),
-                () -> assertEquals(chef1.getProfileUrl(), response.get(0).getProfileUrl()),
-                () -> assertEquals(chef1.getDistance(), response.get(0).getDistance()),
-                () -> assertEquals(chef1.getLat(), response.get(0).getLat()),
-                () -> assertEquals(chef1.getLnt(), response.get(0).getLnt()),
-                () -> assertEquals(chef1.getNickname(), response.get(0).getNickname()),
-                () -> assertEquals(chef1.getRecipeCount(), response.get(0).getRecipeCount()),
+                () -> assertEquals(chef1.getChefId(), response.getContent().get(0).getChefId()),
+                () -> assertEquals(chef1.getIntroduce(), response.getContent().get(0).getIntroduce()),
+                () -> assertEquals(chef1.getStarAvg(), response.getContent().get(0).getStarAvg()),
+                () -> assertEquals(chef1.getReviewCount(), response.getContent().get(0).getReviewCount()),
+                () -> assertEquals(chef1.getProfileUrl(), response.getContent().get(0).getProfileUrl()),
+                () -> assertEquals(chef1.getDistance(), response.getContent().get(0).getDistance()),
+                () -> assertEquals(chef1.getLat(), response.getContent().get(0).getLat()),
+                () -> assertEquals(chef1.getLnt(), response.getContent().get(0).getLnt()),
+                () -> assertEquals(chef1.getNickname(), response.getContent().get(0).getNickname()),
+                () -> assertEquals(chef1.getRecipeCount(), response.getContent().get(0).getRecipeCount()),
 
-                () -> assertEquals(chef2.getChefId(), response.get(1).getChefId()),
-                () -> assertEquals(chef2.getIntroduce(), response.get(1).getIntroduce()),
-                () -> assertEquals(chef2.getStarAvg(), response.get(1).getStarAvg()),
-                () -> assertEquals(chef2.getReviewCount(), response.get(1).getReviewCount()),
-                () -> assertEquals(chef2.getProfileUrl(), response.get(1).getProfileUrl()),
-                () -> assertEquals(chef2.getDistance(), response.get(1).getDistance()),
-                () -> assertEquals(chef2.getLat(), response.get(1).getLat()),
-                () -> assertEquals(chef2.getLnt(), response.get(1).getLnt()),
-                () -> assertEquals(chef2.getNickname(), response.get(1).getNickname()),
-                () -> assertEquals(chef2.getRecipeCount(), response.get(1).getRecipeCount())
+                () -> assertEquals(chef2.getChefId(), response.getContent().get(1).getChefId()),
+                () -> assertEquals(chef2.getIntroduce(), response.getContent().get(1).getIntroduce()),
+                () -> assertEquals(chef2.getStarAvg(), response.getContent().get(1).getStarAvg()),
+                () -> assertEquals(chef2.getReviewCount(), response.getContent().get(1).getReviewCount()),
+                () -> assertEquals(chef2.getProfileUrl(), response.getContent().get(1).getProfileUrl()),
+                () -> assertEquals(chef2.getDistance(), response.getContent().get(1).getDistance()),
+                () -> assertEquals(chef2.getLat(), response.getContent().get(1).getLat()),
+                () -> assertEquals(chef2.getLnt(), response.getContent().get(1).getLnt()),
+                () -> assertEquals(chef2.getNickname(), response.getContent().get(1).getNickname()),
+                () -> assertEquals(chef2.getRecipeCount(), response.getContent().get(1).getRecipeCount())
         );
     }
 
     @Test
     @DisplayName("주변 요리사 조회하기 - 레시피 많은순")
-    void success_getAroundChefList_by_recipe(){
+    void success_getAroundChefList_by_recipe() {
         //given
         AroundChefDto chef1 = getChef1();
         AroundChefDto chef2 = getChef2();
@@ -533,171 +514,97 @@ class ChefMemberServiceImplTest {
                         .build()
                 ));
 
-        given(chefMemberRepository.findAroundChefOrderByRecipeCount(
-                anyLong(), anyDouble(), anyDouble(), anyDouble(), anyInt(), anyInt()
+        given(chefMemberRepository.findAroundChefOrderByType(
+                anyLong(), anyDouble(), anyDouble(), anyDouble(), any(), any()
         )).willReturn(
-                List.of(
-                        chef2, chef1
+                new PageImpl<>(
+                        new ArrayList<>(
+                                Arrays.asList(
+                                        chef2, chef1
+                                )
+                        )
                 )
         );
 
         //when
-        List<AroundChefDto> response = chefMemberService
-                .getAroundChefList(1L, 0, 10,
+        ListResponse<AroundChefDto> response = chefMemberService
+                .getAroundChefList(1L, PageRequest.of(0, 10),
                         ChefSearchType.RECIPE);
 
         //then
         assertAll(
-                () -> assertEquals(chef2.getChefId(), response.get(0).getChefId()),
-                () -> assertEquals(chef2.getIntroduce(), response.get(0).getIntroduce()),
-                () -> assertEquals(chef2.getStarAvg(), response.get(0).getStarAvg()),
-                () -> assertEquals(chef2.getReviewCount(), response.get(0).getReviewCount()),
-                () -> assertEquals(chef2.getProfileUrl(), response.get(0).getProfileUrl()),
-                () -> assertEquals(chef2.getDistance(), response.get(0).getDistance()),
-                () -> assertEquals(chef2.getLat(), response.get(0).getLat()),
-                () -> assertEquals(chef2.getLnt(), response.get(0).getLnt()),
-                () -> assertEquals(chef2.getNickname(), response.get(0).getNickname()),
-                () -> assertEquals(chef2.getRecipeCount(), response.get(0).getRecipeCount()),
+                () -> assertEquals(chef2.getChefId(), response.getContent().get(0).getChefId()),
+                () -> assertEquals(chef2.getIntroduce(), response.getContent().get(0).getIntroduce()),
+                () -> assertEquals(chef2.getStarAvg(), response.getContent().get(0).getStarAvg()),
+                () -> assertEquals(chef2.getReviewCount(), response.getContent().get(0).getReviewCount()),
+                () -> assertEquals(chef2.getProfileUrl(), response.getContent().get(0).getProfileUrl()),
+                () -> assertEquals(chef2.getDistance(), response.getContent().get(0).getDistance()),
+                () -> assertEquals(chef2.getLat(), response.getContent().get(0).getLat()),
+                () -> assertEquals(chef2.getLnt(), response.getContent().get(0).getLnt()),
+                () -> assertEquals(chef2.getNickname(), response.getContent().get(0).getNickname()),
+                () -> assertEquals(chef2.getRecipeCount(), response.getContent().get(0).getRecipeCount()),
 
-                () -> assertEquals(chef1.getChefId(), response.get(1).getChefId()),
-                () -> assertEquals(chef1.getIntroduce(), response.get(1).getIntroduce()),
-                () -> assertEquals(chef1.getStarAvg(), response.get(1).getStarAvg()),
-                () -> assertEquals(chef1.getReviewCount(), response.get(1).getReviewCount()),
-                () -> assertEquals(chef1.getProfileUrl(), response.get(1).getProfileUrl()),
-                () -> assertEquals(chef1.getDistance(), response.get(1).getDistance()),
-                () -> assertEquals(chef1.getLat(), response.get(1).getLat()),
-                () -> assertEquals(chef1.getLnt(), response.get(1).getLnt()),
-                () -> assertEquals(chef1.getNickname(), response.get(1).getNickname()),
-                () -> assertEquals(chef1.getRecipeCount(), response.get(1).getRecipeCount())
+                () -> assertEquals(chef1.getChefId(), response.getContent().get(1).getChefId()),
+                () -> assertEquals(chef1.getIntroduce(), response.getContent().get(1).getIntroduce()),
+                () -> assertEquals(chef1.getStarAvg(), response.getContent().get(1).getStarAvg()),
+                () -> assertEquals(chef1.getReviewCount(), response.getContent().get(1).getReviewCount()),
+                () -> assertEquals(chef1.getProfileUrl(), response.getContent().get(1).getProfileUrl()),
+                () -> assertEquals(chef1.getDistance(), response.getContent().get(1).getDistance()),
+                () -> assertEquals(chef1.getLat(), response.getContent().get(1).getLat()),
+                () -> assertEquals(chef1.getLnt(), response.getContent().get(1).getLnt()),
+                () -> assertEquals(chef1.getNickname(), response.getContent().get(1).getNickname()),
+                () -> assertEquals(chef1.getRecipeCount(), response.getContent().get(1).getRecipeCount())
         );
     }
 
     @Test
     @DisplayName("주변 요리사 조회하기 실패 - 회원 X")
-    void fail_success_getAroundChefList_member_not_found(){
+    void fail_success_getAroundChefList_member_not_found() {
         //given
         given(memberRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
         //when
         MemberException exception = assertThrows(MemberException.class,
                 () -> chefMemberService.getAroundChefList(1L,
-                        0, 10, ChefSearchType.DISTANCE));
+                        PageRequest.of(0, 10), ChefSearchType.DISTANCE));
 
         //then
         assertEquals(MEMBER_NOT_FOUND, exception.getErrorCode());
     }
 
-    private AroundChefDto getChef1(){
-        return new AroundChefDto() {
-            @Override
-            public Long getChefId() {
-                return 1L;
-            }
-
-            @Override
-            public String getIntroduce() {
-                return "요리사1 소개";
-            }
-
-            @Override
-            public double getStarAvg() {
-                return 5.0;
-            }
-
-            @Override
-            public int getReviewCount() {
-                return 5;
-            }
-
-            @Override
-            public String getProfileUrl() {
-                return "https://s3.test.com/image1.png";
-            }
-
-            @Override
-            public String getNickname() {
-                return "chef1";
-            }
-
-            @Override
-            public double getLat() {
-                return 37.1;
-            }
-
-            @Override
-            public double getLnt() {
-                return 127.1;
-            }
-
-            @Override
-            public double getDistance() {
-                return 1.1;
-            }
-
-            @Override
-            public int getRecipeCount() {
-                return 2;
-            }
-        };
+    private AroundChefDto getChef1() {
+        return AroundChefDto.builder()
+                .chefId(1L)
+                .introduce("요리사1 소개")
+                .starAvg(5.0)
+                .recipeCount(5L)
+                .profileUrl("https://s3.test.com/image1.png")
+                .nickname("chef1")
+                .lat(37.1)
+                .lnt(127.1)
+                .distance(1.1)
+                .reviewCount(2)
+                .build();
     }
 
-    private AroundChefDto getChef2(){
-        return new AroundChefDto() {
-            @Override
-            public Long getChefId() {
-                return 2L;
-            }
-
-            @Override
-            public String getIntroduce() {
-                return "요리사2 소개";
-            }
-
-            @Override
-            public double getStarAvg() {
-                return 4.0;
-            }
-
-            @Override
-            public int getReviewCount() {
-                return 4;
-            }
-
-            @Override
-            public String getProfileUrl() {
-                return "https://s3.test.com/image2.png";
-            }
-
-            @Override
-            public String getNickname() {
-                return "chef2";
-            }
-
-            @Override
-            public double getLat() {
-                return 37.2;
-            }
-
-            @Override
-            public double getLnt() {
-                return 127.2;
-            }
-
-            @Override
-            public double getDistance() {
-                return 0.5;
-            }
-
-            @Override
-            public int getRecipeCount() {
-                return 7;
-            }
-        };
+    private AroundChefDto getChef2() {
+        return AroundChefDto.builder()
+                .chefId(2L)
+                .introduce("요리사2 소개")
+                .starAvg(4.0)
+                .recipeCount(4L)
+                .profileUrl("https://s3.test.com/image2.png")
+                .nickname("chef2")
+                .lat(37.2)
+                .lnt(127.2)
+                .distance(0.5)
+                .reviewCount(7)
+                .build();
     }
 
     @Test
     @DisplayName("요리사의 경험치를 올림 성공")
-    void success_plusExp(){
+    void success_plusExp() {
         //given
         given(chefMemberRepository.findById(anyLong()))
                 .willReturn(Optional.of(ChefMember.builder()
@@ -717,7 +624,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사의 경험치를 올림 실패 - 요리사 X")
-    void fail_plusExp_chef_member_not_found(){
+    void fail_plusExp_chef_member_not_found() {
         //given
         given(chefMemberRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
@@ -730,7 +637,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사의 별점 추가 성공")
-    void success_plusStar(){
+    void success_plusStar() {
         //given
         given(chefMemberRepository.findById(anyLong()))
                 .willReturn(Optional.of(ChefMember.builder()
@@ -757,7 +664,7 @@ class ChefMemberServiceImplTest {
 
     @Test
     @DisplayName("요리사의 별점 추가 실패 - 요리사 X")
-    void fail_plusStar_chef_member_not_found(){
+    void fail_plusStar_chef_member_not_found() {
         //given
         given(chefMemberRepository.findById(anyLong()))
                 .willReturn(Optional.empty());
@@ -767,5 +674,148 @@ class ChefMemberServiceImplTest {
         //then
         assertEquals(CHEF_MEMBER_NOT_FOUND, exception.getErrorCode());
     }
+
+    @Test
+    @DisplayName("TOP 요리사 5명 조회 성공")
+    void success_getTopChefList() {
+        //given
+
+        Member member1 = Member.builder()
+                .id(1L)
+                .nickname("a")
+                .profileUrl("http://s3.test.com/1.png")
+                .build();
+        Member member2 = Member.builder()
+                .id(2L)
+                .nickname("b")
+                .profileUrl("http://s3.test.com/2.png")
+                .build();
+        Member member3 = Member.builder()
+                .id(3L)
+                .nickname("c")
+                .profileUrl("http://s3.test.com/3.png")
+                .build();
+        Member member4 = Member.builder()
+                .id(4L)
+                .nickname("d")
+                .profileUrl("http://s3.test.com/4.png")
+                .build();
+        Member member5 = Member.builder()
+                .id(1L)
+                .nickname("e")
+                .profileUrl("http://s3.test.com/5.png")
+                .build();
+
+
+        ChefMember chef1 = ChefMember.builder()
+                .id(1L)
+                .exp(100)
+                .member(member1)
+                .gradeType(GradeType.BRONZE)
+                .build();
+        ChefMember chef2 = ChefMember.builder()
+                .id(2L)
+                .exp(200)
+                .member(member2)
+                .gradeType(GradeType.BRONZE)
+                .build();
+        ChefMember chef3 = ChefMember.builder()
+                .id(3L)
+                .exp(250)
+                .member(member3)
+                .gradeType(GradeType.SILVER)
+                .build();
+        ChefMember chef4 = ChefMember.builder()
+                .id(4L)
+                .exp(600)
+                .member(member4)
+                .gradeType(GradeType.GOLD)
+                .build();
+        ChefMember chef5 = ChefMember.builder()
+                .id(5L)
+                .exp(950)
+                .member(member5)
+                .gradeType(GradeType.PLATINUM)
+                .build();
+
+        given(chefMemberRepository.findTop5ByOrderByExpDesc())
+                .willReturn(
+                        List.of(
+                                chef5, chef4, chef3, chef2, chef1
+                        )
+                );
+
+        //when
+        List<TopChefDto> topChefDtoList = chefMemberService.getTopChefList();
+
+        //then
+
+        assertAll(
+                () -> assertEquals(member5.getId(), topChefDtoList.get(0).getMemberId()),
+                () -> assertEquals(chef5.getId(), topChefDtoList.get(0).getChefMemberId()),
+                () -> assertEquals(member5.getNickname(), topChefDtoList.get(0).getNickname()),
+                () -> assertEquals(member5.getProfileUrl(), topChefDtoList.get(0).getProfileUrl()),
+
+                () -> assertEquals(member4.getId(), topChefDtoList.get(1).getMemberId()),
+                () -> assertEquals(chef4.getId(), topChefDtoList.get(1).getChefMemberId()),
+                () -> assertEquals(member4.getNickname(), topChefDtoList.get(1).getNickname()),
+                () -> assertEquals(member4.getProfileUrl(), topChefDtoList.get(1).getProfileUrl()),
+
+                () -> assertEquals(member3.getId(), topChefDtoList.get(2).getMemberId()),
+                () -> assertEquals(chef3.getId(), topChefDtoList.get(2).getChefMemberId()),
+                () -> assertEquals(member3.getNickname(), topChefDtoList.get(2).getNickname()),
+                () -> assertEquals(member3.getProfileUrl(), topChefDtoList.get(2).getProfileUrl()),
+
+                () -> assertEquals(member2.getId(), topChefDtoList.get(3).getMemberId()),
+                () -> assertEquals(chef2.getId(), topChefDtoList.get(3).getChefMemberId()),
+                () -> assertEquals(member2.getNickname(), topChefDtoList.get(3).getNickname()),
+                () -> assertEquals(member2.getProfileUrl(), topChefDtoList.get(3).getProfileUrl()),
+
+                () -> assertEquals(member1.getId(), topChefDtoList.get(4).getMemberId()),
+                () -> assertEquals(chef1.getId(), topChefDtoList.get(4).getChefMemberId()),
+                () -> assertEquals(member1.getNickname(), topChefDtoList.get(4).getNickname()),
+                () -> assertEquals(member1.getProfileUrl(), topChefDtoList.get(4).getProfileUrl())
+        );
+
+    }
+
+    @Test
+    @DisplayName("요리사 프로필 조회 성공")
+    void success_getChefProfile() {
+
+        //given
+        ChefMember chefMember = ChefMember.builder()
+                .id(1L)
+                .exp(100)
+                .gradeType(GradeType.BRONZE)
+                .build();
+
+        given(chefMemberRepository.findById(anyLong()))
+                .willReturn(Optional.of(chefMember));
+
+        //when
+        ChefProfileDto chefProfileDto = chefMemberService.getChefProfile(1L);
+
+        //then
+        assertAll(
+                () -> assertEquals(chefMember.getGradeType(), chefProfileDto.getGrade()),
+                () -> assertEquals(chefMember.getExp(), chefProfileDto.getExp())
+        );
+    }
+
+    @Test
+    @DisplayName("요리사 프로필 조회 실패 - 요리사 X")
+    void fail_getChefProfile_chef_member_not_found() {
+        //given
+        given(chefMemberRepository.findById(anyLong()))
+                .willReturn(Optional.empty());
+        //when
+        ChefMemberException exception = assertThrows(ChefMemberException.class,
+                () -> chefMemberService.getChefProfile(1L));
+
+        //then
+        assertEquals(CHEF_MEMBER_NOT_FOUND, exception.getErrorCode());
+    }
+
 
 }
